@@ -31,6 +31,7 @@ Mantis
  * Modified setcookie() to use paths.
  * Modified fopen() to open with rb instead of r.
  * Modified language files to use long php tags.
+ * Modified tr bgcolor elements and moved them into td bgcolor blocks to help MacOS IE color table cells properly.
  * Added Hungarian translation.
  * Added g_bug_link_tag to let users customize how to create bug links.
  * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
